tests/paczka2/big_fuzzy/40869060.err
Error in line 4: trYfjCN91J A294 -2,0
Error in line 11: hXAaLaO5z S559 51,5
Error in line 2: trYfjCN91J A294 98,1
Error in line 8: A673 A673 31,4
Error in line 17: 9czvIc A673 27,3
Error in line 39: 9czvIc S559 17,5
Error in line 40: uFJ S656 56,7
Error in line 54: 9czvIc A673 175,7
Error in line 58: uFJ A673 90,2
Error in line 69: hXAaLaO5z A673 6,3
Error in line 72: 9czvIc S656 33,8
Error in line 77: uFJ S656 76,6
Error in line 85: uFJ A673 7,3
Error in line 86: uFJ S559 1,8
Error in line 83: A673 S656 139,3
Error in line 84: hXAaLaO5z S559 22,7
Error in line 96: uFJ A294 24,9
Error in line 93: hXAaLaO5z S656 50,5
Error in line 108: 9czvIc A673 75,9
Error in line 105: hXAaLaO5z A673 56,1
Error in line 120: 9czvIc S559 69,2
Error in line 138: trYfjCN91J A294 44,4
Error in line 134: 9czvIc S559 95,3
Error in line 150: KpUqSeBSG9 S559 264,36
Error in line 155: uFJ S656 79,0
Error in line 151: A673 A673 32,3
Error in line 145: 9czvIc S656 33,6
Error in line 140: KpUqSeBSG9 S559 57,4
Error in line 170: WYRo5m6s S559 8,7
Error in line 179: trYfjCN91J A294 81,0
Error in line 189: A673 A294 15,8
Error in line 202: A673 S656 20,1
Error in line 192: WYRo5m6s A673 3,0
Error in line 210: trYfjCN91J A294 43,4
Error in line 208: hXAaLaO5z S559 58,8
Error in line 221: hXAaLaO5z A294 46,4
Error in line 227: uFJ S559 94,9
Error in line 228: uFJ S656 10,5
Error in line 225: KpUqSeBSG9 A294 24,0
Error in line 235: trYfjCN91J S656 10,16
Error in line 226: trYfjCN91J S559 89,0
Error in line 229: uFJ S559 81,1
